render hero component by set timing

--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,7 @@
     background-image:
         linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
         url("./images/Rectangle 1.png");
+    background-repeat: no-repeat;
+    background-size: cover;
     height: 100vh;
 }
